--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"gulp-plumber": "^1.2.1",
 		"gulp-postcss": "^9.1.0",
 		"gulp-sass": "^5.1.0",
+		"nodemon": "^3.0.3",
 		"opn": "^6.0.0",
 		"postcss": "^8.4.33",
 		"postcss-csso": "^6.0.1",
